[gd_scene load_steps=28 format=2]

[ext_resource path="res://03_chose04/v3/V42.png" type="Texture" id=1]
[ext_resource path="res://03_chose01/check/14.png" type="Texture" id=2]
[ext_resource path="res://03_chose01/check/1.png" type="Texture" id=3]
[ext_resource path="res://03_chose01/check/19.png" type="Texture" id=4]
[ext_resource path="res://03_chose01/check/7.png" type="Texture" id=5]
[ext_resource path="res://03_chose01/check/21.png" type="Texture" id=6]
[ext_resource path="res://03_chose01/check/5.png" type="Texture" id=7]
[ext_resource path="res://03_chose04/03_chose04.png" type="Texture" id=8]
[ext_resource path="res://03_chose01/check/11.png" type="Texture" id=9]
[ext_resource path="res://03_chose01/check/12.png" type="Texture" id=10]
[ext_resource path="res://03_chose01/check/3.png" type="Texture" id=11]
[ext_resource path="res://03_chose01/check/16.png" type="Texture" id=12]
[ext_resource path="res://03_chose01/check/2.png" type="Texture" id=13]
[ext_resource path="res://03_chose01/check/4.png" type="Texture" id=14]
[ext_resource path="res://03_chose01/check/10.png" type="Texture" id=15]
[ext_resource path="res://03_chose01/check/9.png" type="Texture" id=16]
[ext_resource path="res://03_chose01/check/18.png" type="Texture" id=17]
[ext_resource path="res://03_chose01/check/15.png" type="Texture" id=18]
[ext_resource path="res://03_chose04/v3/V41.png" type="Texture" id=19]
[ext_resource path="res://03_chose04/v3/V43.png" type="Texture" id=20]
[ext_resource path="res://03_chose01/check/17.png" type="Texture" id=21]
[ext_resource path="res://03_chose01/check/13.png" type="Texture" id=22]
[ext_resource path="res://03_chose01/check/8.png" type="Texture" id=23]
[ext_resource path="res://03_chose04/03_chose04.gd" type="Script" id=24]
[ext_resource path="res://03_chose01/check/6.png" type="Texture" id=25]
[ext_resource path="res://03_chose01/check/20.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 25 ), ExtResource( 5 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 22 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 26 ), ExtResource( 6 ) ],
"loop": false,
"name": "play",
"speed": 15.0
} ]

[node name="03_chose04" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )

[node name="03Chose04" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 8 )

[node name="b1" type="ToolButton" parent="."]
margin_left = 29.0
margin_top = 307.0
margin_right = 805.0
margin_bottom = 362.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="b1"]
position = Vector2( 30, 25 )
frames = SubResource( 1 )
animation = "play"

[node name="Sprite" type="Sprite" parent="b1"]
position = Vector2( 427, 27 )
texture = ExtResource( 19 )

[node name="b2" type="ToolButton" parent="."]
margin_left = 29.0
margin_top = 419.0
margin_right = 1129.0
margin_bottom = 555.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="b2"]
position = Vector2( 30, 68 )
frames = SubResource( 1 )
animation = "play"

[node name="Sprite" type="Sprite" parent="b2"]
position = Vector2( 588, 69 )
texture = ExtResource( 1 )

[node name="b3" type="ToolButton" parent="."]
margin_left = 29.0
margin_top = 569.0
margin_right = 1270.0
margin_bottom = 700.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="b3"]
position = Vector2( 30, 65 )
frames = SubResource( 1 )
animation = "play"

[node name="Sprite" type="Sprite" parent="b3"]
position = Vector2( 666, 69 )
texture = ExtResource( 20 )

[connection signal="button_down" from="b1" to="." method="_on_b1_button_down"]
[connection signal="animation_finished" from="b1/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="b2" to="." method="_on_b2_button_down"]
[connection signal="animation_finished" from="b2/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="b3" to="." method="_on_b3_button_down"]
[connection signal="animation_finished" from="b3/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
